@@ -1,64 +1,44 @@
 package dev.langchain4j.model.googleai;
 
-import dev.langchain4j.Experimental;
+import static dev.langchain4j.internal.RetryUtils.withRetryMappingExceptions;
+import static dev.langchain4j.internal.Utils.getOrDefault;
+import static dev.langchain4j.internal.ValidationUtils.ensureNotBlank;
+
 import dev.langchain4j.data.embedding.Embedding;
 import dev.langchain4j.data.segment.TextSegment;
+import dev.langchain4j.http.client.HttpClientBuilder;
 import dev.langchain4j.model.embedding.DimensionAwareEmbeddingModel;
-import dev.langchain4j.model.embedding.EmbeddingModel;
 import dev.langchain4j.model.output.Response;
-import org.slf4j.Logger;
-
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static dev.langchain4j.internal.RetryUtils.withRetryMappingExceptions;
-import static dev.langchain4j.internal.Utils.getOrDefault;
-import static dev.langchain4j.internal.ValidationUtils.ensureNotBlank;
-
-@Experimental
 public class GoogleAiEmbeddingModel extends DimensionAwareEmbeddingModel {
 
     private static final int MAX_NUMBER_OF_SEGMENTS_PER_BATCH = 100;
-    private static final Logger log = org.slf4j.LoggerFactory.getLogger(GoogleAiEmbeddingModel.class);
 
     private final GeminiService geminiService;
-
     private final String modelName;
-    private final String apiKey;
     private final Integer maxRetries;
     private final TaskType taskType;
     private final String titleMetadataKey;
     private final Integer outputDimensionality;
 
-    public GoogleAiEmbeddingModel(
-            String modelName,
-            String apiKey,
-            Integer maxRetries,
-            TaskType taskType,
-            String titleMetadataKey,
-            Integer outputDimensionality,
-            Duration timeout,
-            Boolean logRequestsAndResponses
-    ) {
-
-        this.modelName = ensureNotBlank(modelName, "modelName");
-        this.apiKey = ensureNotBlank(apiKey, "apiKey");
-
-        this.maxRetries = getOrDefault(maxRetries, 2);
-
-        this.taskType = taskType;
-        this.titleMetadataKey = getOrDefault(titleMetadataKey, "title");
-
-        this.outputDimensionality = outputDimensionality;
-
-        Duration timeout1 = getOrDefault(timeout, Duration.ofSeconds(60));
-
-        boolean logRequestsAndResponses1 = logRequestsAndResponses != null && logRequestsAndResponses;
-
-        this.geminiService = new GeminiService(logRequestsAndResponses1 ? log : null, timeout1);
+    public GoogleAiEmbeddingModel(GoogleAiEmbeddingModelBuilder builder) {
+        ensureNotBlank(builder.apiKey, "apiKey");
+        this.geminiService = new GeminiService(
+                builder.httpClientBuilder,
+                builder.apiKey,
+                builder.baseUrl,
+                getOrDefault(builder.logRequestsAndResponses, false),
+                builder.timeout);
+        this.modelName = ensureNotBlank(builder.modelName, "modelName");
+        this.maxRetries = getOrDefault(builder.maxRetries, 2);
+        this.taskType = builder.taskType;
+        this.titleMetadataKey = getOrDefault(builder.titleMetadataKey, "title");
+        this.outputDimensionality = builder.outputDimensionality;
     }
 
     public static GoogleAiEmbeddingModelBuilder builder() {
@@ -69,13 +49,10 @@ public class GoogleAiEmbeddingModel extends DimensionAwareEmbeddingModel {
     public Response<Embedding> embed(TextSegment textSegment) {
         GoogleAiEmbeddingRequest embeddingRequest = getGoogleAiEmbeddingRequest(textSegment);
 
-        GoogleAiEmbeddingResponse geminiResponse = withRetryMappingExceptions(() -> this.geminiService.embed(this.modelName, this.apiKey, embeddingRequest), this.maxRetries);
+        GoogleAiEmbeddingResponse geminiResponse =
+                withRetryMappingExceptions(() -> geminiService.embed(modelName, embeddingRequest), maxRetries);
 
-        if (geminiResponse != null) {
-            return Response.from(Embedding.from(geminiResponse.getEmbedding().getValues()));
-        } else {
-            throw new RuntimeException("Gemini embedding response was null (embed)");
-        }
+        return Response.from(Embedding.from(geminiResponse.getEmbedding().getValues()));
     }
 
     @Override
@@ -85,9 +62,8 @@ public class GoogleAiEmbeddingModel extends DimensionAwareEmbeddingModel {
 
     @Override
     public Response<List<Embedding>> embedAll(List<TextSegment> textSegments) {
-        List<GoogleAiEmbeddingRequest> embeddingRequests = textSegments.stream()
-                .map(this::getGoogleAiEmbeddingRequest)
-                .collect(Collectors.toList());
+        List<GoogleAiEmbeddingRequest> embeddingRequests =
+                textSegments.stream().map(this::getGoogleAiEmbeddingRequest).collect(Collectors.toList());
 
         List<Embedding> allEmbeddings = new ArrayList<>();
         int numberOfEmbeddings = embeddingRequests.size();
@@ -102,24 +78,19 @@ public class GoogleAiEmbeddingModel extends DimensionAwareEmbeddingModel {
             GoogleAiBatchEmbeddingRequest batchEmbeddingRequest = new GoogleAiBatchEmbeddingRequest();
             batchEmbeddingRequest.setRequests(embeddingRequests.subList(startIndex, lastIndex));
 
-            GoogleAiBatchEmbeddingResponse geminiResponse = withRetryMappingExceptions(() -> this.geminiService.batchEmbed(this.modelName, this.apiKey, batchEmbeddingRequest));
+            GoogleAiBatchEmbeddingResponse geminiResponse =
+                    withRetryMappingExceptions(() -> geminiService.batchEmbed(modelName, batchEmbeddingRequest));
 
-            if (geminiResponse != null) {
-                allEmbeddings.addAll(geminiResponse.getEmbeddings().stream()
-                        .map(values -> Embedding.from(values.getValues()))
-                        .collect(Collectors.toList()));
-            } else {
-                throw new RuntimeException("Gemini embedding response was null (embedAll)");
-            }
+            allEmbeddings.addAll(geminiResponse.getEmbeddings().stream()
+                    .map(values -> Embedding.from(values.getValues()))
+                    .toList());
         }
 
         return Response.from(allEmbeddings);
     }
 
     private GoogleAiEmbeddingRequest getGoogleAiEmbeddingRequest(TextSegment textSegment) {
-        GeminiPart geminiPart = GeminiPart.builder()
-                .text(textSegment.text())
-                .build();
+        GeminiPart geminiPart = GeminiPart.builder().text(textSegment.text()).build();
 
         GeminiContent content = new GeminiContent(Collections.singletonList(geminiPart), null);
 
@@ -131,12 +102,7 @@ public class GoogleAiEmbeddingModel extends DimensionAwareEmbeddingModel {
         }
 
         return new GoogleAiEmbeddingRequest(
-                "models/" + this.modelName,
-                content,
-                this.taskType,
-                title,
-                this.outputDimensionality
-        );
+                "models/" + this.modelName, content, this.taskType, title, this.outputDimensionality);
     }
 
     @Override
@@ -155,8 +121,11 @@ public class GoogleAiEmbeddingModel extends DimensionAwareEmbeddingModel {
     }
 
     public static class GoogleAiEmbeddingModelBuilder {
+
+        private HttpClientBuilder httpClientBuilder;
         private String modelName;
         private String apiKey;
+        private String baseUrl;
         private Integer maxRetries;
         private TaskType taskType;
         private String titleMetadataKey;
@@ -164,7 +133,11 @@ public class GoogleAiEmbeddingModel extends DimensionAwareEmbeddingModel {
         private Duration timeout;
         private Boolean logRequestsAndResponses;
 
-        GoogleAiEmbeddingModelBuilder() {
+        GoogleAiEmbeddingModelBuilder() {}
+
+        public GoogleAiEmbeddingModelBuilder httpClientBuilder(HttpClientBuilder httpClientBuilder) {
+            this.httpClientBuilder = httpClientBuilder;
+            return this;
         }
 
         public GoogleAiEmbeddingModelBuilder modelName(String modelName) {
@@ -174,6 +147,11 @@ public class GoogleAiEmbeddingModel extends DimensionAwareEmbeddingModel {
 
         public GoogleAiEmbeddingModelBuilder apiKey(String apiKey) {
             this.apiKey = apiKey;
+            return this;
+        }
+
+        public GoogleAiEmbeddingModelBuilder baseUrl(String baseUrl) {
+            this.baseUrl = baseUrl;
             return this;
         }
 
@@ -208,11 +186,7 @@ public class GoogleAiEmbeddingModel extends DimensionAwareEmbeddingModel {
         }
 
         public GoogleAiEmbeddingModel build() {
-            return new GoogleAiEmbeddingModel(this.modelName, this.apiKey, this.maxRetries, this.taskType, this.titleMetadataKey, this.outputDimensionality, this.timeout, this.logRequestsAndResponses);
-        }
-
-        public String toString() {
-            return "GoogleAiEmbeddingModel.GoogleAiEmbeddingModelBuilder(modelName=" + this.modelName + ", apiKey=" + this.apiKey + ", maxRetries=" + this.maxRetries + ", taskType=" + this.taskType + ", titleMetadataKey=" + this.titleMetadataKey + ", outputDimensionality=" + this.outputDimensionality + ", timeout=" + this.timeout + ", logRequestsAndResponses=" + this.logRequestsAndResponses + ")";
+            return new GoogleAiEmbeddingModel(this);
         }
     }
 }
