@@ -1,5 +1,17 @@
 package dev.langchain4j.model.vertexai.gemini;
 
+import static dev.langchain4j.internal.RetryUtils.withRetryMappingExceptions;
+import static dev.langchain4j.internal.Utils.copy;
+import static dev.langchain4j.internal.Utils.getOrDefault;
+import static dev.langchain4j.internal.Utils.isNullOrEmpty;
+import static dev.langchain4j.internal.ValidationUtils.ensureNotBlank;
+import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
+import static dev.langchain4j.model.ModelProvider.GOOGLE_VERTEX_AI_GEMINI;
+import static dev.langchain4j.spi.ServiceHelper.loadFactories;
+import static java.util.Arrays.asList;
+import static java.util.Collections.emptyList;
+
+import com.google.auth.oauth2.GoogleCredentials;
 import com.google.cloud.vertexai.VertexAI;
 import com.google.cloud.vertexai.api.Content;
 import com.google.cloud.vertexai.api.FunctionCall;
@@ -16,7 +28,9 @@ import dev.langchain4j.agent.tool.ToolExecutionRequest;
 import dev.langchain4j.agent.tool.ToolSpecification;
 import dev.langchain4j.data.message.AiMessage;
 import dev.langchain4j.data.message.ChatMessage;
+import dev.langchain4j.internal.ChatRequestValidationUtils;
 import dev.langchain4j.model.ModelProvider;
+import dev.langchain4j.model.chat.Capability;
 import dev.langchain4j.model.chat.ChatModel;
 import dev.langchain4j.model.chat.listener.ChatModelErrorContext;
 import dev.langchain4j.model.chat.listener.ChatModelListener;
@@ -24,31 +38,23 @@ import dev.langchain4j.model.chat.listener.ChatModelRequestContext;
 import dev.langchain4j.model.chat.listener.ChatModelResponseContext;
 import dev.langchain4j.model.chat.request.ChatRequest;
 import dev.langchain4j.model.chat.request.ChatRequestParameters;
-import dev.langchain4j.internal.ChatRequestValidationUtils;
+import dev.langchain4j.model.chat.request.ResponseFormat;
+import dev.langchain4j.model.chat.request.ResponseFormatType;
 import dev.langchain4j.model.chat.response.ChatResponse;
 import dev.langchain4j.model.chat.response.ChatResponseMetadata;
 import dev.langchain4j.model.output.Response;
 import dev.langchain4j.model.vertexai.gemini.spi.VertexAiGeminiChatModelBuilderFactory;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.io.Closeable;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
-
-import static dev.langchain4j.internal.RetryUtils.withRetryMappingExceptions;
-import static dev.langchain4j.internal.Utils.getOrDefault;
-import static dev.langchain4j.internal.Utils.isNullOrEmpty;
-import static dev.langchain4j.internal.ValidationUtils.ensureNotBlank;
-import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
-import static dev.langchain4j.model.ModelProvider.GOOGLE_VERTEX_AI_GEMINI;
-import static dev.langchain4j.spi.ServiceHelper.loadFactories;
-import static java.util.Collections.emptyList;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Represents a Google Vertex AI Gemini language model with a chat completion interface, such as gemini-pro.
@@ -71,6 +77,8 @@ import static java.util.Collections.emptyList;
  */
 public class VertexAiGeminiChatModel implements ChatModel, Closeable {
 
+    private static final Logger logger = LoggerFactory.getLogger(VertexAiGeminiChatModel.class);
+
     private final GenerativeModel generativeModel;
     private final GenerationConfig generationConfig;
     private final Integer maxRetries;
@@ -87,29 +95,140 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
     private final Boolean logRequests;
     private final Boolean logResponses;
 
-    private static final Logger logger = LoggerFactory.getLogger(VertexAiGeminiChatModel.class);
-
     private final List<ChatModelListener> listeners;
+    private final Set<Capability> supportedCapabilities;
 
-    public VertexAiGeminiChatModel(String project,
-                                   String location,
-                                   String modelName,
-                                   Float temperature,
-                                   Integer maxOutputTokens,
-                                   Integer topK,
-                                   Float topP,
-                                   Integer seed,
-                                   Integer maxRetries,
-                                   String responseMimeType,
-                                   Schema responseSchema,
-                                   Map<HarmCategory, SafetyThreshold> safetySettings,
-                                   Boolean useGoogleSearch,
-                                   String vertexSearchDatastore,
-                                   ToolCallingMode toolCallingMode,
-                                   List<String> allowedFunctionNames,
-                                   Boolean logRequests,
-                                   Boolean logResponses,
-                                   List<ChatModelListener> listeners) {
+    public VertexAiGeminiChatModel(VertexAiGeminiChatModelBuilder builder) {
+        ensureNotBlank(builder.modelName, "modelName");
+
+        GenerationConfig.Builder generationConfigBuilder = GenerationConfig.newBuilder();
+        if (builder.temperature != null) {
+            generationConfigBuilder.setTemperature(builder.temperature);
+        }
+        if (builder.maxOutputTokens != null) {
+            generationConfigBuilder.setMaxOutputTokens(builder.maxOutputTokens);
+        }
+        if (builder.topK != null) {
+            generationConfigBuilder.setTopK(builder.topK);
+        }
+        if (builder.topP != null) {
+            generationConfigBuilder.setTopP(builder.topP);
+        }
+        if (builder.seed != null) {
+            generationConfigBuilder.setSeed(builder.seed);
+        }
+        if (builder.responseMimeType != null) {
+            generationConfigBuilder.setResponseMimeType(builder.responseMimeType);
+        }
+        if (builder.responseSchema != null) {
+            if (builder.responseSchema.getEnumCount() > 0) {
+                generationConfigBuilder.setResponseMimeType("text/x.enum");
+            } else {
+                generationConfigBuilder.setResponseMimeType("application/json");
+            }
+            generationConfigBuilder.setResponseSchema(builder.responseSchema);
+        }
+        this.generationConfig = generationConfigBuilder.build();
+
+        this.safetySettings = copy(builder.safetySettings);
+
+        if (builder.useGoogleSearch != null && builder.useGoogleSearch) {
+            googleSearch = ResponseGrounding.googleSearchTool(builder.modelName);
+        } else {
+            googleSearch = null;
+        }
+        if (builder.vertexSearchDatastore != null) {
+            vertexSearch = ResponseGrounding.vertexAiSearch(builder.vertexSearchDatastore);
+        } else {
+            vertexSearch = null;
+        }
+
+        if (builder.allowedFunctionNames != null) {
+            this.allowedFunctionNames = Collections.unmodifiableList(builder.allowedFunctionNames);
+        } else {
+            this.allowedFunctionNames = Collections.emptyList();
+        }
+        if (builder.toolCallingMode != null) {
+            // only a subset of functions allowed to be used by the model
+            this.toolConfig = switch (builder.toolCallingMode) {
+                case NONE ->
+                    ToolConfig.newBuilder()
+                            .setFunctionCallingConfig(FunctionCallingConfig.newBuilder()
+                                    .setMode(FunctionCallingConfig.Mode.NONE)
+                                    .build())
+                            .build();
+                case AUTO ->
+                    ToolConfig.newBuilder()
+                            .setFunctionCallingConfig(FunctionCallingConfig.newBuilder()
+                                    .setMode(FunctionCallingConfig.Mode.AUTO)
+                                    .build())
+                            .build();
+                case ANY ->
+                    ToolConfig.newBuilder()
+                            .setFunctionCallingConfig(FunctionCallingConfig.newBuilder()
+                                    .setMode(FunctionCallingConfig.Mode.ANY)
+                                    .addAllAllowedFunctionNames(this.allowedFunctionNames)
+                                    .build())
+                            .build();
+            };
+
+        } else {
+            this.toolConfig = ToolConfig.newBuilder()
+                    .setFunctionCallingConfig(FunctionCallingConfig.newBuilder()
+                            .setMode(FunctionCallingConfig.Mode.AUTO)
+                            .build())
+                    .build();
+        }
+
+        VertexAI.Builder vertexAiBuilder = new VertexAI.Builder()
+                .setProjectId(ensureNotBlank(builder.project, "project"))
+                .setLocation(ensureNotBlank(builder.location, "location"))
+                .setCustomHeaders(Collections.singletonMap("user-agent", "LangChain4j"));
+
+        if (builder.credentials != null) {
+            GoogleCredentials scopedCredentials =
+                    builder.credentials.createScoped("https://www.googleapis.com/auth/cloud-platform");
+            vertexAiBuilder.setCredentials(scopedCredentials);
+        }
+
+        this.vertexAI = vertexAiBuilder.build();
+
+        this.generativeModel = new GenerativeModel(builder.modelName, vertexAI).withGenerationConfig(generationConfig);
+
+        this.maxRetries = getOrDefault(builder.maxRetries, 2);
+        this.logRequests = getOrDefault(builder.logRequests, false);
+        this.logResponses = getOrDefault(builder.logResponses, false);
+        this.listeners = copy(builder.listeners);
+        this.supportedCapabilities = copy(builder.supportedCapabilities);
+    }
+
+    /**
+     * @deprecated please use {@link #VertexAiGeminiChatModel(VertexAiGeminiChatModelBuilder)} instead
+     */
+    @Deprecated(forRemoval = true, since = "1.1.0-beta7")
+    public VertexAiGeminiChatModel(
+            String project,
+            String location,
+            String modelName,
+            Float temperature,
+            Integer maxOutputTokens,
+            Integer topK,
+            Float topP,
+            Integer seed,
+            Integer maxRetries,
+            String responseMimeType,
+            Schema responseSchema,
+            Map<HarmCategory, SafetyThreshold> safetySettings,
+            Boolean useGoogleSearch,
+            String vertexSearchDatastore,
+            ToolCallingMode toolCallingMode,
+            List<String> allowedFunctionNames,
+            Boolean logRequests,
+            Boolean logResponses,
+            List<ChatModelListener> listeners,
+            Set<Capability> supportedCapabilities) {
+        ensureNotBlank(modelName, "modelName");
+
         GenerationConfig.Builder generationConfigBuilder = GenerationConfig.newBuilder();
         if (temperature != null) {
             generationConfigBuilder.setTemperature(temperature);
@@ -146,7 +265,7 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
         }
 
         if (useGoogleSearch != null && useGoogleSearch) {
-            googleSearch = ResponseGrounding.googleSearchTool();
+            googleSearch = ResponseGrounding.googleSearchTool(modelName);
         } else {
             googleSearch = null;
         }
@@ -163,33 +282,34 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
         }
         if (toolCallingMode != null) {
             // only a subset of functions allowed to be used by the model
-            if (toolCallingMode == ToolCallingMode.ANY &&
-                    allowedFunctionNames != null && !allowedFunctionNames.isEmpty()) {
-                this.toolConfig = ToolConfig.newBuilder().setFunctionCallingConfig(
-                        FunctionCallingConfig.newBuilder()
-                                .setMode(FunctionCallingConfig.Mode.ANY)
-                                .addAllAllowedFunctionNames(this.allowedFunctionNames)
-                                .build()
-                ).build();
-            } else if (toolCallingMode == ToolCallingMode.NONE) { // no functions allowed
-                this.toolConfig = ToolConfig.newBuilder().setFunctionCallingConfig(
-                        FunctionCallingConfig.newBuilder()
-                                .setMode(FunctionCallingConfig.Mode.NONE)
-                                .build()
-                ).build();
-            } else { // Mode AUTO by default
-                this.toolConfig = ToolConfig.newBuilder().setFunctionCallingConfig(
-                        FunctionCallingConfig.newBuilder()
-                                .setMode(FunctionCallingConfig.Mode.AUTO)
-                                .build()
-                ).build();
-            }
+            this.toolConfig = switch (toolCallingMode) {
+                case NONE ->
+                    ToolConfig.newBuilder()
+                            .setFunctionCallingConfig(FunctionCallingConfig.newBuilder()
+                                    .setMode(FunctionCallingConfig.Mode.NONE)
+                                    .build())
+                            .build();
+                case AUTO ->
+                    ToolConfig.newBuilder()
+                            .setFunctionCallingConfig(FunctionCallingConfig.newBuilder()
+                                    .setMode(FunctionCallingConfig.Mode.AUTO)
+                                    .build())
+                            .build();
+                case ANY ->
+                    ToolConfig.newBuilder()
+                            .setFunctionCallingConfig(FunctionCallingConfig.newBuilder()
+                                    .setMode(FunctionCallingConfig.Mode.ANY)
+                                    .addAllAllowedFunctionNames(this.allowedFunctionNames)
+                                    .build())
+                            .build();
+            };
+
         } else {
-            this.toolConfig = ToolConfig.newBuilder().setFunctionCallingConfig(
-                    FunctionCallingConfig.newBuilder()
+            this.toolConfig = ToolConfig.newBuilder()
+                    .setFunctionCallingConfig(FunctionCallingConfig.newBuilder()
                             .setMode(FunctionCallingConfig.Mode.AUTO)
-                            .build()
-            ).build();
+                            .build())
+                    .build();
         }
 
         this.vertexAI = new VertexAI.Builder()
@@ -198,51 +318,40 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
                 .setCustomHeaders(Collections.singletonMap("user-agent", "LangChain4j"))
                 .build();
 
-        this.generativeModel = new GenerativeModel(
-                ensureNotBlank(modelName, "modelName"), vertexAI)
-                .withGenerationConfig(generationConfig);
+        this.generativeModel = new GenerativeModel(modelName, vertexAI).withGenerationConfig(generationConfig);
 
         this.maxRetries = getOrDefault(maxRetries, 2);
 
-        if (logRequests != null) {
-            this.logRequests = logRequests;
-        } else {
-            this.logRequests = false;
-        }
-        if (logResponses != null) {
-            this.logResponses = logResponses;
-        } else {
-            this.logResponses = false;
-        }
+        this.logRequests = getOrDefault(logRequests, false);
+        this.logResponses = getOrDefault(logResponses, false);
 
         this.listeners = listeners == null ? emptyList() : new ArrayList<>(listeners);
+        this.supportedCapabilities = copy(supportedCapabilities);
     }
 
-    public VertexAiGeminiChatModel(GenerativeModel generativeModel,
-                                   GenerationConfig generationConfig) {
+    public VertexAiGeminiChatModel(GenerativeModel generativeModel, GenerationConfig generationConfig) {
         this(generativeModel, generationConfig, 2);
     }
 
-    public VertexAiGeminiChatModel(GenerativeModel generativeModel,
-                                   GenerationConfig generationConfig,
-                                   Integer maxRetries) {
+    public VertexAiGeminiChatModel(
+            GenerativeModel generativeModel, GenerationConfig generationConfig, Integer maxRetries) {
         this.generationConfig = ensureNotNull(generationConfig, "generationConfig");
-        this.generativeModel = ensureNotNull(generativeModel, "generativeModel")
-                .withGenerationConfig(generationConfig);
+        this.generativeModel = ensureNotNull(generativeModel, "generativeModel").withGenerationConfig(generationConfig);
         this.maxRetries = getOrDefault(maxRetries, 2);
         this.vertexAI = null;
         this.safetySettings = Collections.emptyMap();
         this.googleSearch = null;
         this.vertexSearch = null;
-        this.toolConfig = ToolConfig.newBuilder().setFunctionCallingConfig(
-                FunctionCallingConfig.newBuilder()
+        this.toolConfig = ToolConfig.newBuilder()
+                .setFunctionCallingConfig(FunctionCallingConfig.newBuilder()
                         .setMode(FunctionCallingConfig.Mode.AUTO)
-                        .build()
-        ).build();
+                        .build())
+                .build();
         this.allowedFunctionNames = Collections.emptyList();
         this.logRequests = false;
         this.logResponses = false;
         this.listeners = Collections.emptyList();
+        this.supportedCapabilities = Set.of();
     }
 
     @Override
@@ -250,14 +359,13 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
         ChatRequestParameters parameters = chatRequest.parameters();
         ChatRequestValidationUtils.validateParameters(parameters);
         ChatRequestValidationUtils.validate(parameters.toolChoice());
-        ChatRequestValidationUtils.validate(parameters.responseFormat());
 
         Response<AiMessage> response;
         List<ToolSpecification> toolSpecifications = parameters.toolSpecifications();
         if (isNullOrEmpty(toolSpecifications)) {
-            response = generate(chatRequest.messages());
+            response = generate(chatRequest.messages(), parameters.responseFormat());
         } else {
-            response = generate(chatRequest.messages(), toolSpecifications);
+            response = generate(chatRequest.messages(), toolSpecifications, parameters.responseFormat());
         }
 
         return ChatResponse.builder()
@@ -269,11 +377,12 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
                 .build();
     }
 
-    private Response<AiMessage> generate(List<ChatMessage> messages) {
-        return generate(messages, new ArrayList<>());
+    private Response<AiMessage> generate(List<ChatMessage> messages, ResponseFormat responseFormat) {
+        return generate(messages, new ArrayList<>(), responseFormat);
     }
 
-    private Response<AiMessage> generate(List<ChatMessage> messages, List<ToolSpecification> toolSpecifications) {
+    private Response<AiMessage> generate(
+            List<ChatMessage> messages, List<ToolSpecification> toolSpecifications, ResponseFormat responseFormat) {
         String modelName = generativeModel.getModelName();
 
         List<Tool> tools = new ArrayList<>();
@@ -289,7 +398,21 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
             tools.add(this.vertexSearch);
         }
 
+        GenerationConfig generationConfig = this.generationConfig;
+        if (responseFormat != null && responseFormat.type() == ResponseFormatType.JSON) {
+            GenerationConfig.Builder configBuilder = GenerationConfig.newBuilder(this.generationConfig);
+            configBuilder.setResponseMimeType("application/json");
+
+            if (responseFormat.jsonSchema() != null) {
+                Schema schema = SchemaHelper.from(responseFormat.jsonSchema().rootElement());
+                configBuilder.setResponseSchema(schema);
+            }
+
+            generationConfig = configBuilder.build();
+        }
+
         GenerativeModel model = this.generativeModel
+                .withGenerationConfig(generationConfig)
                 .withTools(tools)
                 .withToolConfig(this.toolConfig);
 
@@ -305,7 +428,12 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
         }
 
         if (this.logRequests && logger.isDebugEnabled()) {
-            logger.debug("GEMINI ({}) request: {} tools: {}", modelName, instructionAndContent, tools);
+            logger.debug(
+                    "GEMINI ({}) request: {} tools: {} responseFormat: {}",
+                    modelName,
+                    instructionAndContent,
+                    tools,
+                    responseFormat);
         }
 
         GenerativeModel finalModel = model;
@@ -318,11 +446,12 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
                         .topP((double) generationConfig.getTopP())
                         .maxOutputTokens(generationConfig.getMaxOutputTokens())
                         .toolSpecifications(toolSpecifications)
+                        .responseFormat(responseFormat)
                         .build())
                 .build();
-        ConcurrentHashMap<Object, Object> listenerAttributes = new ConcurrentHashMap<>();
-        ChatModelRequestContext chatModelRequestContext = new ChatModelRequestContext(
-                listenerRequest, provider(), listenerAttributes);
+        final ConcurrentHashMap<Object, Object> listenerAttributes = new ConcurrentHashMap<>();
+        ChatModelRequestContext chatModelRequestContext =
+                new ChatModelRequestContext(listenerRequest, provider(), listenerAttributes);
         listeners.forEach((listener) -> {
             try {
                 listener.onRequest(chatModelRequestContext);
@@ -331,12 +460,12 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
             }
         });
 
-        GenerateContentResponse response = null;
+        final GenerateContentResponse response;
         try {
-            response = withRetryMappingExceptions(() ->
-                    finalModel.generateContent(instructionAndContent.contents), maxRetries);
+            response = withRetryMappingExceptions(
+                    () -> finalModel.generateContent(instructionAndContent.contents), maxRetries);
         } catch (Exception e) {
-            listeners.forEach((listener) -> {
+            listeners.forEach(listener -> {
                 try {
                     ChatModelErrorContext chatModelErrorContext =
                             new ChatModelErrorContext(e, listenerRequest, provider(), listenerAttributes);
@@ -358,28 +487,22 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
         List<FunctionCall> functionCalls = content.getPartsList().stream()
                 .filter(Part::hasFunctionCall)
                 .map(Part::getFunctionCall)
-                .collect(Collectors.toList());
+                .toList();
 
-        Response finalResponse = null;
-        AiMessage aiMessage;
+        final Response<AiMessage> finalResponse;
+        final AiMessage aiMessage;
 
         if (!functionCalls.isEmpty()) {
             List<ToolExecutionRequest> toolExecutionRequests = FunctionCallHelper.fromFunctionCalls(functionCalls);
 
             aiMessage = AiMessage.from(toolExecutionRequests);
-            finalResponse = Response.from(
-                    aiMessage,
-                    TokenUsageMapper.map(response.getUsageMetadata()),
-                    FinishReasonMapper.map(ResponseHandler.getFinishReason(response))
-            );
         } else {
             aiMessage = AiMessage.from(ResponseHandler.getText(response));
-            finalResponse = Response.from(
-                    aiMessage,
-                    TokenUsageMapper.map(response.getUsageMetadata()),
-                    FinishReasonMapper.map(ResponseHandler.getFinishReason(response))
-            );
         }
+        finalResponse = Response.from(
+                aiMessage,
+                TokenUsageMapper.map(response.getUsageMetadata()),
+                FinishReasonMapper.map(ResponseHandler.getFinishReason(response)));
 
         ChatResponse listenerResponse = ChatResponse.builder()
                 .aiMessage(aiMessage)
@@ -389,8 +512,8 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
                         .finishReason(finalResponse.finishReason())
                         .build())
                 .build();
-        ChatModelResponseContext chatModelResponseContext = new ChatModelResponseContext(
-                listenerResponse, listenerRequest, provider(), listenerAttributes);
+        ChatModelResponseContext chatModelResponseContext =
+                new ChatModelResponseContext(listenerResponse, listenerRequest, provider(), listenerAttributes);
         listeners.forEach((listener) -> {
             try {
                 listener.onResponse(chatModelResponseContext);
@@ -410,6 +533,11 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
     }
 
     @Override
+    public Set<Capability> supportedCapabilities() {
+        return supportedCapabilities;
+    }
+
+    @Override
     public List<ChatModelListener> listeners() {
         return listeners;
     }
@@ -420,7 +548,8 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
     }
 
     public static VertexAiGeminiChatModelBuilder builder() {
-        for (VertexAiGeminiChatModelBuilderFactory factory : loadFactories(VertexAiGeminiChatModelBuilderFactory.class)) {
+        for (VertexAiGeminiChatModelBuilderFactory factory :
+                loadFactories(VertexAiGeminiChatModelBuilderFactory.class)) {
             return factory.get();
         }
         return new VertexAiGeminiChatModelBuilder();
@@ -446,6 +575,8 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
         private Boolean logRequests;
         private Boolean logResponses;
         private List<ChatModelListener> listeners;
+        private Set<Capability> supportedCapabilities;
+        private GoogleCredentials credentials;
 
         public VertexAiGeminiChatModelBuilder() {
             // This is public so it can be extended
@@ -547,12 +678,22 @@ public class VertexAiGeminiChatModel implements ChatModel, Closeable {
             return this;
         }
 
-        public VertexAiGeminiChatModel build() {
-            return new VertexAiGeminiChatModel(this.project, this.location, this.modelName, this.temperature, this.maxOutputTokens, this.topK, this.topP, this.seed, this.maxRetries, this.responseMimeType, this.responseSchema, this.safetySettings, this.useGoogleSearch, this.vertexSearchDatastore, this.toolCallingMode, this.allowedFunctionNames, this.logRequests, this.logResponses, this.listeners);
+        public VertexAiGeminiChatModelBuilder supportedCapabilities(Set<Capability> supportedCapabilities) {
+            this.supportedCapabilities = supportedCapabilities;
+            return this;
         }
 
-        public String toString() {
-            return "VertexAiGeminiChatModel.VertexAiGeminiChatModelBuilder(project=" + this.project + ", location=" + this.location + ", modelName=" + this.modelName + ", temperature=" + this.temperature + ", maxOutputTokens=" + this.maxOutputTokens + ", topK=" + this.topK + ", topP=" + this.topP + ", seed=" + this.seed + ", maxRetries=" + this.maxRetries + ", responseMimeType=" + this.responseMimeType + ", responseSchema=" + this.responseSchema + ", safetySettings=" + this.safetySettings + ", useGoogleSearch=" + this.useGoogleSearch + ", vertexSearchDatastore=" + this.vertexSearchDatastore + ", toolCallingMode=" + this.toolCallingMode + ", allowedFunctionNames=" + this.allowedFunctionNames + ", logRequests=" + this.logRequests + ", logResponses=" + this.logResponses + ", listeners=" + this.listeners + ")";
+        public VertexAiGeminiChatModelBuilder supportedCapabilities(Capability... supportedCapabilities) {
+            return supportedCapabilities(new HashSet<>(asList(supportedCapabilities)));
+        }
+
+        public VertexAiGeminiChatModelBuilder credentials(GoogleCredentials credentials) {
+            this.credentials = credentials;
+            return this;
+        }
+
+        public VertexAiGeminiChatModel build() {
+            return new VertexAiGeminiChatModel(this);
         }
     }
 }
